# marvelous-databricks-course-smadhubalan22

./: .pre-commit-config.yaml  README.md  Taskfile.yml  Taskfiles.md  project_config.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: cd.yml  ci.yml
